--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -155,7 +155,7 @@ img:hover{opacity:0.75}
 .photograph_nav{margin-left:-11px}
 .photograph_nav li{display:block; float:left; margin-left:9px; width:32%}
 .photo_grid figure{position:relative; float:left; overflow:hidden; margin:10px 1%; margin-top:0; height:150px; width:100%; background:#3085a3; text-align:center; cursor:pointer}
-.photo_grid figure img{position:relative; display:block; min-height:100%; max-width:100%; width:100%; height:100% opacity:0.8}
+.photo_grid figure img{position:relative; display:block; min-height:100%; max-width:100%; width:100%; height:100%; opacity:0.8}
 .photo_grid figure figcaption{padding:2em; color:#fff; text-transform:uppercase; font-size:1.25em; -webkit-backface-visibility:hidden; backface-visibility:hidden}
 .photo_grid figure figcaption::before, .photo_grid figure figcaption::after{pointer-events:none}
 .photo_grid figure figcaption{position:absolute; bottom:0; left:0; width:100%; height:100%}
@@ -252,7 +252,7 @@ figure.effect-layla:hover figcaption::after, figure.effect-layla:hover h2, figur
 .nav-slit a.next{right:0}
 .nav-slit .icon-wrap{position:relative; display:block; padding:45px 5px}
 .nav-slit .icon-wrap i{color:#fff; font-size:40px; display:inline-block}
-.nav-slit div{position:absolute; top:0; width:200px; height:100%; background-color:#939a9f; -webkit-transition:-webkit-transform 0.3s 0.3s; transition:transform 0.3s 0.3s; -webkit-perspective:1000px; perspective:1000px}
+.nav-slit div{position:absolute; top:0; width:200px; height:100%; background-color:#939a9f; -webkit-transition:-webkit-transform 0.3s 0.3s; transition:transform 0.3s 0.3s; -webkit-perspective:1000px; perspective:1000}
 .nav-slit a.prev div{left:0; -webkit-transform:translateX(-100%); transform:translateX(-100%)}
 .nav-slit a.next div{right:0; text-align:right; -webkit-transform:translateX(100%); transform:translateX(100%)}
 .nav-slit h3{position:absolute; top:100%; margin:0; padding:0 20px; height:30%; color:#fff; text-transform:uppercase; letter-spacing:1px; font-weight:500; font-size:0.75em; line-height:2.75; width:200px; text-align:left; overflow:hidden; padding-top:4px; -webkit-transition:-webkit-transform 0.3s; transition:transform 0.3s; -webkit-transform:rotateX(-90deg); transform:rotateX(-90deg); -webkit-transform-origin:50% 0; transform-origin:50% 0; -webki-backface-visibility:hidden; -webkit-backface-visibility:hidden; backface-visibility:hidden}
